2005-11-10  Sean Hefty <sean.hefty@intel.com>

	* include/infiniband/sa-kern-abi.h: New include file to contain
	definitions of SA structures passed between userspace and kernel.

	* include/infiniband/sa.h: New include file for definitions of 
	SA structures used by multiple libraries.

	* include/infiniband/marshall.h src/marshall.c: New files to define
	routines used to exchange data with kernel modules.

	* include/infiniband/kern-abi.h: Added data structures used to exchange
	QP attribute with kernel modules.

2005-11-09  Michael S. Tsirkin  <mst@mellanox.co.il>

	* src/device.c (ibv_get_devices): Make function reentrant by using
	a mutex to make sure we initialize the device list at most once.

2005-11-08  Roland Dreier  <roland@cisco.com>

	* src/cmd.c (ibv_cmd_create_qp): Add handling for new create QP
	interface, which has the kernel return QP capabilities.

	* src/cmd.c (ibv_cmd_modify_srq): Split off handling of modify SRQ
	for ABI versions 3 and older, which passed max_sge as part of command.

2005-10-30  Roland Dreier  <roland@cisco.com>

	* examples/srq_pingpong.c (pp_init_ctx): Create CQ with rx_depth +
	num_qp entries, instead of just rx_depth + 1 entries, because
	there can be one send completion pending for each QP.

2005-10-25  Roland Dreier  <roland@cisco.com>

	* Release version 1.0-rc4.

	* examples/uc_pingpong.c (pp_connect_ctx): Fix QP attribute masks
	used to modify QP to RTR and RTS -- we should not be setting
	RDMA/atomic attributes for UC QPs.  Now that the mthca kernel
	driver bug is fixed, the error is exposed here.

	* examples/rc_pingpong.c, examples/srq_pingpong.c,
	examples/uc_pingpong.c, examples/ud_pingpong.c: Keep track of
	whether send and/or receive is pending.  This avoids failures when
	the remote side receives data and posts a send very quickly, and
	the local side completes the receive before the previous send.
	With the old code, this could result in posting a send before the